# Szakdoga-PCL

./: CMakeLists.txt  README.md  main.cpp
Controller/: Controller.cpp  Controller.h
DataStructures/: BoundingBoxData.h  EditCloudData.h  InputFormData.h
Forms/: HelpDialogBox.cpp  HelpDialogBox.h  HelpDialogBox.ui  InputDialogBox.cpp  InputDialogBox.h  InputDialogBox.ui  InputFormData.h
Model/: Database.cpp  Database.h  Model.cpp  Model.h  PointCloudShapes.cpp  PointCloudShapes.h
Samples/: ImportPCDSample.cpp  VisualizerSample.cpp
Tests/: ModelTest.cc  PointCloudShapesTest.cc
Tests/Data/: circle_data.pcd  circle_filled_data.pcd  cone_data.pcd  cone_filled_data.pcd  cube_data.pcd  cube_filled_data.pcd  cylinder_data.pcd  cylinder_filled_data.pcd  rectangle_data.pcd  rectangle_filled_data.pcd  sphere_data.pcd  sphere_filled_data.pcd
View/: Viewer.cpp  Viewer.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
